<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="category_name">Name</string>
    <string name="hint_item_name">Name</string>
    <string name="category_price">Price</string>
    <string name="hint_item_price">Price</string>
    <string name="category_quantity">Current Quantity</string>
    <string name="category_order">Place Order</string>
    <string name="order">Order More</string>
    <string name="hint_item_order_quantity">Quantity</string>
    <string name="no_items_found">Click Button to Add Items.</string>
    <string name="unsaved_changes_alert_message">Exit without saving?</string>
    <string name="unsaved_changes_positive_button">Exit</string>
    <string name="unsaved_changes_negative_button">Cancel</string>
    <string name="action_save">Save Item</string>
    <string name="action_delete">Delete Item</string>
    <string name="new_order">New Order</string>
    <string name="order_more_toast"><![CDATA[Tap Item to Change Quantity & Order More]]></string>
    <string name="name_required_toast">Item Name is required</string>
    <string name="price_required_toast">Item Price is required</string>
    <string name="error_saving_toast">Error saving item</string>
    <string name="item_saved_toast">Item saved</string>
    <string name="delete_item_dialog">Delete this item?</string>
    <string name="delete_item_dialog_positive">Delete</string>
    <string name="delete_item_dialog_negative">Cancel</string>
    <string name="error_deleting_toast">Error deleting item</string>
    <string name="item_deleted_toast">Item deleted</string>
    <string name="order_more_sample_name">John</string>
    <string name="order_more_email_body_1">Can you please process an order for</string>
    <string name="order_more_email_body_3">currently priced at $</string>
    <string name="order_more_email_body_4">Thanks!</string>
    <string name="order_more_email_subject">New Order</string>
    <string name="order_more_email_body_2">(s/es). I believe they are</string>
    <string name="order_more_quantity_required_toast">Order Quantity is required</string>
    <string name="name_and_price_required_toast"><![CDATA[Item Name & Price are required]]></string>
    <string name="image_required_toast">Item Image is required - Tap Camera</string>
</resources>
